[project]
name = "hiero-sdk-python"
dynamic = ["version"]
description = "A Hiero SDK in pure Python"
maintainers = [
    { name = "Nadine Loepfe", email = "nadine.loepfe@hashgraph.com" },
    { name = "Sophie Bulloch", email = "exploreriii57@gmail.com" }
]
authors = [
    { name = "Nadine Loepfe", email = "nadine.loepfe@hashgraph.com" },
    { name = "Richard Bair", email = "rbair23@users.noreply.github.com" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10, <4"
dependencies = [
    "protobuf>=4.21.12,<8",
    "grpcio>=1.76.0,<2",
    "cryptography>=44.0.1,<47",
    "requests>=2.31.0,<3",
    "pycryptodome>=3.18.0,<4",
    "eth-abi>=5.1.0,<6",
    "python-dotenv>=1.2.1,<3",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
]

[project.optional-dependencies]
eth = [
    "eth-keys>=0.7.0,<0.8",
    "rlp>=4.0.1,<5",
]

tck = ["flask>=3.0.0,<4"]

[dependency-groups]
dev = [
    "grpcio-tools>=1.76.0,<2",
    "pytest>=8.3.4,<10",
    "pytest-cov>=7.0.0,<8",
    "hypothesis>=6.137.2",
    "pre-commit>=4.0.0",
]

lint = [
    "ruff>=0.14.9,<1",
    "mypy>=1.18.2,<2",
    "typing-extensions>=4.15.0,<5",
]

[tool.uv]
default-groups = ["dev", "lint"]

[build-system]
requires = ["pdm-backend", "setuptools", "setuptools_scm", "grpcio-tools"]
build-backend = "pdm.backend"

[tool.setuptools_scm]
version_scheme = "python-simplified-semver"
local_scheme = "dirty-tag"

[tool.pdm]
version = { source = "scm" }

[tool.pdm.build]
package-dir = "src"
excludes = ["**/.pytest_cache"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort (Import sorting)
    "B",    # flake8-bugbear (Real logic bugs)
    "UP",   # pyupgrade (Modern syntax)
    "SIM",  # flake8-simplify
    "PERF", # performance traps
    "ARG",  # unused function arguments
    "RET",  # return consistency
    "RSE",  # exception correctness
]

ignore = [
    "D",       # Docstrings handled by pydocstyle
    "E501",    # Ignore line-length in linter (let the formatter handle it)
    "B008",    # Allow function calls in defaults
    "UP017",   # Keep timezone.utc shorthand
    "SIM105",  # Allow 'try-except-pass'
]

[tool.ruff.lint.isort]
known-first-party = ["hiero_sdk_python"]
required-imports = ["from __future__ import annotations"]
combine-as-imports = true
split-on-trailing-comma = true
lines-after-imports = 2

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = [
    "F401",   # Unused imports in __init__
    "I002",   # No future annotations in __init__
]

"tests/**/*.py" = [
    "S101",    # Asserts for pytest
    "PLR2004", # Magic numbers in test data
    "ARG001",  # Unused args for fixtures
    "ANN",     # No type hints required in tests
    "PERF",    # Disable list compression not found
    "E712",    # Allow '== True' in tests for explicit assertions
    "D",       # No docstrings required in tests
    "ERA001",   # commeneted code found
]

"examples/**/*.py" = [
    "T201",    # Print statements are fine here
    "T203",    # pprint is fine
    "D100",    # No module docstring
    "I002",    # Allow skipping future annotations
    "PERF203",  # try-except inside loops found
    "ERA001",   # commeneted code found
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.ruff.lint.pydocstyle]
convention = "google"
